# comfyui-try-on

./: README.md  __init__.py  pyproject.toml
nodes/: cat_vton.py  func.py  segformer_b2_clothes.py  segformer_b3_fashion.py
py/: cat_vton.py  func.py
py/catvton/: pipeline.py
